itaipava / Newcastle BJJ Open version - first attempt

--- a/public/css/control.css
+++ b/public/css/control.css
@@ -55,6 +55,7 @@ input::placeholder { /* Most modern browsers support this now. */
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-1-4-points {
@@ -67,6 +68,7 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 2 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-1-3-points {
@@ -79,6 +81,7 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 2 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-1-2-points {
@@ -91,6 +94,7 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 2 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-1-adv-pen {
@@ -103,6 +107,7 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 2 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .adv-pen-text {
@@ -110,11 +115,11 @@ input::placeholder { /* Most modern browsers support this now. */
 }
 
 .timer-box {
-  grid-row: 3 / span 3;
+  grid-row: 3 / span 2;
   grid-column: span 4;
   background-color: #000;
   color: #fff;
-  font-size: 2em;
+  font-size: 3em;
   font-weight: bold;
   display: flex;
   flex-direction: column;
@@ -132,6 +137,7 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 5 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-2-3-points {
@@ -144,6 +150,7 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 5 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-2-2-points {
@@ -156,6 +163,7 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 5 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-2-adv-pen {
@@ -168,10 +176,11 @@ input::placeholder { /* Most modern browsers support this now. */
   flex-direction: column;
   grid-row: 5 / span 2;
   grid-column: span 2;
+  border: 1px solid #b7bac3;
 }
 
 .fighter-2-score {
-  grid-row: 6 / span 1;
+  grid-row: 5 / span 3;
   grid-column: span 4;
   background-color: #fff;
   color: #000;
@@ -180,6 +189,7 @@ input::placeholder { /* Most modern browsers support this now. */
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid #b7bac3;
 }
 
 .points-text {
