--- a/views/control2.pug
+++ b/views/control2.pug
@@ -11,12 +11,12 @@ block content
   .fighter-1-name
     input#fighter-1-name(
       type="text",
-      placeholder="clic para agregar luchador"
+      placeholder="Click to add fighter"
     )
   .fighter-2-name
     input#fighter-2-name(
       type="text",
-      placeholder="clic para agregar luchador"
+      placeholder="Click to add fighter"
     )
   .fighter-1-score 0
   .fighter-2-score 0
@@ -46,11 +46,11 @@ block content
     button.btn.btn-dark.btn-sm#subadvf1 - vent
     button.btn.btn-dark.btn-sm#subpenalf1 - penal
   .controls-2
-    button.btn.btn-success#start Iniciar
-    button.btn.btn-info#restart Reiniciar
+    button.btn.btn-success#start Start
+    button.btn.btn-info#restart Restart
   .fighter-2-controls-sub
     button.btn.btn-dark.btn-sm#sub4f2 - 4
     button.btn.btn-dark.btn-sm#sub3f2 - 3
     button.btn.btn-dark.btn-sm#sub2f2 - 2
-    button.btn.btn-dark.btn-sm#subadvf2 - vent
-    button.btn.btn-dark.btn-sm#subpenalf2 - penal
+    button.btn.btn-dark.btn-sm#subadvf2 - ADV
+    button.btn.btn-dark.btn-sm#subpenalf2 - PEN
