--- a/views/control.pug
+++ b/views/control.pug
@@ -5,37 +5,37 @@ block content
   .fighter-1-name
     input#fighter-1-name(
       type="text",
-      placeholder="clic para agregar luchador"
+      placeholder="click to add fighter"
     )
   .fighter-1-score 0
   .fighter-1-4-points
-    .points-text Montada, Toma de espalda
+    .points-text Mount, Back Control
     .points-score 0
     .points-btn
       button.btn.btn-primary#add4f1 +
       .qty 4
       button.btn.btn-danger#sub4f1 -
   .fighter-1-3-points
-    .points-text Pase de guardia
+    .points-text Guard Pass
     .points-score 0
     .points-btn
       button.btn.btn-primary#add3f1 +
       .qty 3
       button.btn.btn-danger#sub3f1 -
   .fighter-1-2-points
-    .points-text Derribo, Raspada, Rodilla al pecho
+    .points-text Takedown, Sweep, Knee on Belly
     .points-score 0
     .points-btn
       button.btn.btn-primary#add2f1 +
       .qty 2
       button.btn.btn-danger#sub2f1 -
   .fighter-1-adv-pen
-    .adv-pen-text Ventaja
+    .adv-pen-text Advantage
     .fighter-1-adv.qty-adv-pen 0
     .buttons
       i.fas.fa-plus-circle#addadvf1
       i.fas.fa-minus-circle#subadvf1
-    .adv-pen-text Penalización
+    .adv-pen-text Penalty
     .fighter-1-penal.qty-adv-pen 0
     .buttons
       i.fas.fa-plus-circle#addpenalf1
@@ -52,36 +52,36 @@ block content
   .fighter-2-name
     input#fighter-2-name(
       type="text",
-      placeholder="clic para agregar luchador"
+      placeholder="Click to add fighter"
     )
   .fighter-2-4-points
-    .points-text Montada, Toma de espalda
+    .points-text Mount, Back Control
     .points-score 0
     .points-btn
       button.btn.btn-primary#add4f2 +
       .qty 4
       button.btn.btn-danger#sub4f2 -
   .fighter-2-3-points
-    .points-text Pase de guardia
+    .points-text Guard Pass
     .points-score 0
     .points-btn
       button.btn.btn-primary#add3f2 +
       .qty 3
       button.btn.btn-danger#sub3f2 -
   .fighter-2-2-points
-    .points-text Derribo, Raspada, Rodilla al pecho
+    .points-text Takedown, Sweep, Knee on Belly
     .points-score 0
     .points-btn
       button.btn.btn-primary#add2f2 +
       .qty 2
       button.btn.btn-danger#sub2f2 -
   .fighter-2-adv-pen
-    .adv-pen-text Ventaja
+    .adv-pen-text Advantage
     .fighter-2-adv.qty-adv-pen 0
     .buttons
       i.fas.fa-plus-circle#addadvf2
       i.fas.fa-minus-circle#subadvf2
-    .adv-pen-text Penalización
+    .adv-pen-text Penalty
     .fighter-2-penal.qty-adv-pen 0
     .buttons
       i.fas.fa-plus-circle#addpenalf2
