Add The Lab banner to Scoreboard

--- a/public/css/scoreboard.css
+++ b/public/css/scoreboard.css
@@ -19,7 +19,12 @@ body {
   justify-content: center;
 }
 
-.logo1 img, .logo2 img {
+.logo1 img {
+  height 120px;
+  width 360px;
+}
+
+.logo2 img {
   height: 120px;
 }
 
