--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   link(rel='stylesheet', href='/css/scoreboard.css')
   .logo1
-    img(src="/images/ncl_bjj_open.jpg")
+    img(src="/images/lab_banner.png")
   .timer
   .logo2
     a(href="/control")
